--- a/Homeworks/CSS/02_CSS/add/style-4.css
+++ b/Homeworks/CSS/02_CSS/add/style-4.css
@@ -1,11 +1,24 @@
-.container {
+.table {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+
+    
+}
+.row1{
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    
+}
+.container {
+    display: flex;
+    flex-direction: row;
     align-items: flex-start;
     padding: 0.2em;
 }
 .navigation {
-    
+    position: relative;
     width: 15em;
     background-color: rgba(145, 127, 127, 0.116);
     margin-bottom: 0.2em;
@@ -14,17 +27,29 @@ main {
     
 }
 .article1 {
-   flex-grow: 1;
+   
     background-color: rgba(0, 0, 211, 0.295);
     margin-bottom: .2em;
 }
 .article2 {
-    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     background-color: rgba(0, 0, 211, 0.295);
     margin-bottom: .2em;
+    
  }
 img {
     border-radius: 15px;
+    
+    
+    
+    
+}
+
+.imessage{
+    display: flex;
+    align-self: flex-end;
     
 }
 
