--- a/Homeworks/CSS/03_CSS/style_base.css
+++ b/Homeworks/CSS/03_CSS/style_base.css
@@ -45,23 +45,28 @@
         border-radius: 10px;
         cursor: pointer ;
         transition-duration: 2s;
+        
        
         
     }
     div.MenuLevel2 > div:hover { 
+        display: block;
         background-color: rgba(85, 30, 78, 0.171); 
         border: solid rgb(22, 1, 16) 2px; 
         border-radius: 10px;
+        position: relative;
+        right: 150px;
         cursor: pointer ;
         transition-duration: 2s;
+        
        
     }
-
+/* C выезжающим меню подзапуталась)))*/
 
     div.MenuLevel1 > div:hover div.MenuLevel2 { 
         display:block; 
-        position: absolute; 
-        top: 100%; 
+        position: inherit; 
+        left: 100%; 
         z-index: 1 ;
     }
 
@@ -82,23 +87,31 @@
             border: solid rgb(255, 251, 0) 2px; 
             border-radius: 10px;
             position: relative; 
-            cursor: pointer 
+            cursor: pointer ;
         }
         div.MenuLevel2 { 
+            display: none;
+            position: inherit;
             width: 150px; 
-            display: none 
+            
+            
+            
         }
         div.MenuLevel2 > div { 
             background-color: rgba(253, 2, 220, 0.171); 
             border: solid rgb(255, 0, 179) 2px; 
             border-radius: 10px;
             cursor: pointer ;
+            
         }
         div.MenuLevel1 > div:hover div.MenuLevel2 { 
             display:block; 
-            position: absolute; 
-            left: 100%; 
+            position: inherit; 
+            top:100%;
             z-index: 1 ;
+            transition: all;
+            transition-duration: 1s;
+            
         }
     }
 
