--- a/Homeworks/CSS/01_CSS/base/ex_styles.css
+++ b/Homeworks/CSS/01_CSS/base/ex_styles.css
@@ -1,2 +1,2 @@
-@import url(mystyle_for_screen.css);
-@import url(mystyle_for_print.css) print ;
+@import url(mystyle_for_screen.css) screen;
+@import url(mystyle_for_print.css) print;
