--- a/Homeworks/CSS/04_CSS/add/style_1.css
+++ b/Homeworks/CSS/04_CSS/add/style_1.css
@@ -1,5 +1,5 @@
 div {
-    height: 6em;
+    height: 7em;
     width: 600px;
     border: 1px solid #464646;
     padding: px 18px;
@@ -8,21 +8,21 @@ div {
 
 
 /* картинки не отображаются(*/
-div a [href$="word"] ::after {
+div a [href*="word"] ::after {
     content: url(../base/img/word.jpg);
 }
 
-div a [href$="pdf"] ::after {
+div a [href*="pdf"] ::after {
     content: url(../base/img/pdf.png);
 }
 
-div a [href$="archive"] ::after {
+div a [href*="archive"] ::after {
     content: url(../base/img/archive.gif);
 }
-div a [href$="zip"] ::before {
+div a [href*="zip"] ::before {
     content: url(../base/img/zip.png);
 }
 
-h2 > a [href$=""] ::before {
+h2 a ::before {
     content: url(../base/img/doc.jpg);
 }
